--- a/L1/tv2.html
+++ b/L1/tv2.html
@@ -57,7 +57,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'http://fastrunner.live:8080//live/7Bh2Sr3JuM/QPLX1evCo5/23146.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'http://1tv41.icu:8080/live/Gizvid145@giz.com/1234@4321/35238.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
