--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -447,7 +447,7 @@ href="https://ourlibrary.us/computer"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                1 (🇬🇧)            </div>
+                1 (🇦🇫)            </div>
         </a>
     </div>
 </div></div><div id="jw-element-416141882" data-jw-element-id="416141882" style="width: 25%" class="jw-tree-node jw-element jw-column jw-tree-container jw-responsive lt300 lt400 lt480 lt540 lt600 lt640 lt800">
@@ -511,7 +511,7 @@ href="https://ourlibrary.us/computer"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                2 (🇳🇱)            </div>
+                2 (🇮🇷)            </div>
         </a>
     </div>
 </div></div><div id="jw-element-416145903" data-jw-element-id="416145903" style="width: 25%" class="jw-tree-node jw-element jw-column jw-tree-container jw-responsive lt300 lt400 lt480 lt540 lt600 lt640 lt800">
