--- a/L1/tv2.html
+++ b/L1/tv2.html
@@ -56,7 +56,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'http://viponern.top:8080//live/VIP013221728044939102/37c47a6e35c2/1275.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://stream.live12.ir/hls2/persiana.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
